--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1><a href="https://github.com/archion/videopop" title="Github主页">Popout Video</a></h1>
 <div class="content">
-	<img src="a.jpg" alt="img">
+	<img src="show.jpg" alt="img">
 	<h2>功能</h2>
 	<p>
 	弹出网页上的视频<br>
@@ -35,7 +35,7 @@
 	</p>
 	<p>
 	安装完成后到视频网站（比如<a href="http://v.youku.com/v_show/id_XNzAyNzQzNDg4.html">这个</a>）,可以看到页面右下角会有个“Popup”按钮，点击后会出现提示，按照提示操作即可。
-	<img src="https://raw.githubusercontent.com/archion/videopop/master/popup.png" alt="popup">
+	<img src="popup.png" alt="img">
 	</p>
 	<h2>问题反馈</h2>
 	<p>
