--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<script  type="text/javascript" src="util.js" async></script>
 </head>
 <body>
-<h1><a href="https://github.com/archion/videopop" title="Github主页">Popout Video</a></h1>
+<h1><a href="https://github.com/archion/videopop" title="转到github项目页">Popout Video</a></h1>
 <div class="content">
-	<img src="show.jpg" alt="img">
+	<img src="show.png" alt="img">
 	<h2>功能</h2>
 	<p>
 	弹出网页上的视频
@@ -21,7 +21,7 @@
 	</p>
 	<h3>一、小书签</h3>
 	<p>
-	添加链接<a href="javascript:(function(){var vp=document.createElement('script');vp.setAttribute('src','https://rawgit.com/archion/videopop/master/videopop.js');document.getElementsByTagName('head')[0].appendChild(vp);})();" title="添加为书签">popup</a>为浏览器书签
+	添加链接<a href="javascript:(function(){var vp=document.createElement('script');vp.setAttribute('src','https://rawgit.com/archion/videopop/master/videopop.js');document.getElementsByTagName('head')[0].appendChild(vp);})();" title="添加为书签">popup</a>为浏览器书签（直接拉拽到书签栏）
 	</p>
 	<p>
 	完成后到视频网站（比如<a href="http://v.youku.com/v_show/id_XNzAyNzQzNDg4.html">这个</a>）,然后点击新添加的书签,点击后会出现提示，按照提示操作即可。
