--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script  type="text/javascript" src="util.js" async></script>
 </head>
 <body>
-<h1><a href="https://github.com/archion/videopop" title="转到github项目页">Popout Video</a></h1>
+<h1><a href="https://github.com/archion/videopop" title="转到github项目页">Popup Video</a></h1>
 <div class="content">
 	<img src="show.png" alt="img">
 	<h2>功能</h2>
