--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 	安装完成后到视频网站（比如<a href="http://v.youku.com/v_show/id_XNzAyNzQzNDg4.html">这个</a>）,可以看到页面右下角会有个“Popup”按钮，点击后会出现提示，按照提示操作即可。
 	<img src="popup.png" alt="img">
 	</p>
+	<h2>关于窗口置顶</h2>
+	<p>
+	本工具并不提供窗口置顶功能，一方面对于浏览器脚本而言很难想象能实现这个功能，另一方面置顶功能应当由操作系统的窗口管理提供而非本工具提供。Linux上大部分桌面环境的窗口管理器都原生提供置顶功能，对于Windows，可以安装额外的软件（如powermenu等）来实现窗口置顶。
+	</p>
 	<h2>问题反馈</h2>
 	<p>
 	<a href="https://github.com/archion/videopop/issues">点我</a>
