--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</p>
 	<h2>关于窗口置顶</h2>
 	<p>
-	本工具并不提供窗口置顶功能，一方面对于浏览器脚本而言很难想象能实现这个功能，另一方面置顶功能应当由操作系统的窗口管理提供而非本工具提供。Linux上大部分桌面环境的窗口管理器都原生提供置顶功能，对于Windows，可以安装额外的软件（如powermenu等）来实现窗口置顶。
+	本工具并不提供窗口置顶功能，一方面对于浏览器脚本而言很难想象能实现这个功能，另一方面置顶功能应当由操作系统的窗口管理提供而非本工具提供。GNU/Linux上大部分桌面环境的窗口管理器都原生提供置顶功能，对于Windows，可以安装额外的软件（如powermenu等）来实现窗口置顶。
 	</p>
 	<h2>问题反馈</h2>
 	<p>
